--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
       <div class="bar"></div>
       <div class="bar"></div>
     </div>
-    <h2>Chào mừng đến với hệ thống</h2>
-    <p id="login-prompt" class="hidden">Vui lòng đăng nhập để tiếp tục.</p>
-    <div id="auth-buttons" class="auth-buttons">
-      <button id="to-register-btn" class="auth-btn">Đăng ký</button>
-      <button id="to-login-btn" class="auth-btn">Đăng nhập</button>
+    <h2>Chào mừng đến Menu</h2>
     </div>
   </div>
 
@@ -29,9 +25,9 @@
       <span class="close-btn" onclick="toggleMenu()">×</span>
     </div>
     <ul class="sidebar-menu">
-      <li><a href="#" onclick="navigate('content')">Xem nội dung</a></li>
+      <li><a href="#" onclick="navigate('content')">Trang Chủ</a></li>
       <li><a href="#" onclick="navigate('account')">Tài khoản</a></li>
-      <li><a href="#" onclick="navigate('admin')">Admin</a></li>
+      <li><a href="#" onclick="navigate('admin')">Quản lý</a></li>
     </ul>
   </div>
 
