--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <div class="bar"></div>
     </div>
     <h2>Chào mừng đến Menu</h2>
+    <div id="auth-buttons" class="auth-buttons">
+      <button id="to-register-btn" class="auth-btn">Đăng ký</button>
+      <button id="to-login-btn" class="auth-btn">Đăng nhập</button>
     </div>
   </div>
 
