--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="#" id="zalo-link" onclick="openSocialLink('zalo')">Zalo</a></li>
         <li><a href="#" id="tiktok-link" onclick="openSocialLink('tiktok')">TikTok</a></li>
         <li><a href="#" id="youtube-link" onclick="openSocialLink('youtube')">Youtube</a></li>
-        <li><a href="#" onclick="navigateToHome()">Trang chủ</a></li>
+        <li><a href="#" onclick="navigate('content')">Trang chủ</a></li>
       </ul>
     </div>
   </div>
@@ -642,4 +642,4 @@
     updateSocialLinks();
   </script>
 </body>
-  </html>
+</html>
